<resources>
    <string name="app_name">ActivityNavigation</string>
    <string name="about">About the application</string>
    <string name="application">Application name:</string>
    <string name="version">Version name:</string>
    <string name="version_code">Version code:</string>
    <string name="open_box">Open Box</string>
    <string name="about_bt">About</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="set_the_number_of_boxes">Set the number of boxes:</string>
    <string name="enable_timer">Enable timer</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="the_end">The end</string>
    <string name="oops">Oops, there is no enough time, try again later.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="to_main_menu">To main menu</string>
    <string name="please_select_a_box">Please select a box.</string>
    <string name="box_title">Box #%1$d</string>
    <string name="box">Box</string>
    <string name="timer_text">Timer: %1$d sec.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_count">choose count</string>
    <string name="menu">Main menu</string>
    <string name="fragment_navigation">Fragment Navigation Example</string>
</resources>