<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_white_radius"
        android:elevation="2dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/application"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/app_text"
            app:layout_constraintStart_toEndOf="@+id/app_text"
            app:layout_constraintTop_toTopOf="@+id/app_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/version"
            app:layout_constraintStart_toStartOf="@+id/app_text"
            app:layout_constraintTop_toBottomOf="@id/app_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/version_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/version_text"
            app:layout_constraintStart_toStartOf="@+id/app_name_field"
            app:layout_constraintTop_toTopOf="@+id/version_text"
            tools:text="1.0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/version_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/version_code"
            app:layout_constraintStart_toStartOf="@+id/version_text"
            app:layout_constraintTop_toBottomOf="@id/version_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/version_code_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/version_code_text"
            app:layout_constraintStart_toStartOf="@+id/version_name_field"
            app:layout_constraintTop_toTopOf="@+id/version_code_text"
            tools:text="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_tb"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ok"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/version_code_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>