<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eternal_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background_white_radius"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/set_the_number_of_boxes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text_set"
            app:layout_constraintStart_toStartOf="@id/text_set"
            app:layout_constraintTop_toBottomOf="@id/text_set" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/check_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/enable_timer"
            app:layout_constraintBottom_toBottomOf="@id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinner"
            app:layout_constraintTop_toTopOf="@id/spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_tb"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/conferm_tb"
        app:layout_constraintStart_toStartOf="@id/eternal_constraint"
        app:layout_constraintTop_toBottomOf="@id/eternal_constraint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/conferm_tb"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/eternal_constraint"
        app:layout_constraintStart_toEndOf="@+id/cancel_tb"
        app:layout_constraintTop_toBottomOf="@id/eternal_constraint" />

</androidx.constraintlayout.widget.ConstraintLayout>